fix: use react-bootstrap instead

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,13 @@
 # production
 /build
 
+# webstorm
+/idea/workspace.xml
+/idea/tasks.xml
+/idea/usage.statistics.xml
+/idea/shelf
+
+
 # misc
 .DS_Store
 .env.local
